Fixed improper spacing on Workshop mobile page

--- a/styles/workshop.css
+++ b/styles/workshop.css
@@ -258,7 +258,7 @@ button.btn-filled {
     /* Main Information */
 
     #main-info {
-        margin: 0 auto 200px;
+        margin: 0 auto 104px;
         width: 345px;
     }
 
